workspace/ros2_ws/log/build_2024-12-02_12-07-04/rosapi/stdout.log
-- The C compiler identification is GNU 7.5.0
-- The CXX compiler identification is GNU 7.5.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake_ros: 0.8.0 (/opt/ros/eloquent/share/ament_cmake_ros/cmake)
-- Found PythonInterp: /usr/bin/python3 (found suitable version "3.6.9", minimum required is "3") 
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Configuring done
-- Generating done
-- Build files have been written to: /workspace/ros2_ws/build/rosapi
[36mInstall the project...[0m
-- Install configuration: ""
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/pythonpath.sh
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/pythonpath.dsv
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/objectutils.py
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/glob_helper.py
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/stringify_field_types.py
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/params.py
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/__init__.py
-- Installing: /workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/proxy.py
Listing '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi'...
Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/__init__.py'...
Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/glob_helper.py'...
Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/objectutils.py'...
***   File "/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/objectutils.py", line 76
    if matches := re.findall("sequence<([^<]+)>", type):
                ^
SyntaxError: invalid syntax

Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/params.py'...
Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/proxy.py'...
Compiling '/workspace/ros2_ws/install/rosapi/lib/python3.6/site-packages/rosapi/stringify_field_types.py'...
-- Installing: /workspace/ros2_ws/install/rosapi/share/ament_index/resource_index/package_run_dependencies/rosapi
-- Installing: /workspace/ros2_ws/install/rosapi/share/ament_index/resource_index/parent_prefix_path/rosapi
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/ament_prefix_path.sh
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/ament_prefix_path.dsv
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/path.sh
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/environment/path.dsv
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/local_setup.bash
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/local_setup.sh
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/local_setup.zsh
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/local_setup.dsv
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/package.dsv
-- Installing: /workspace/ros2_ws/install/rosapi/share/ament_index/resource_index/packages/rosapi
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/cmake/rosapiConfig.cmake
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/cmake/rosapiConfig-version.cmake
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/package.xml
-- Installing: /workspace/ros2_ws/install/rosapi/lib/rosapi/rosapi_node
-- Installing: /workspace/ros2_ws/install/rosapi/share/rosapi/mapping_rules.yaml
